fixes after downport